Se le borraron las imagenes , se modificaron los codigos de las paginas de recetas y ubicacion

--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/prueba.css">
     <link rel="stylesheet" href="../css/estilos.css">
-    <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Antic+Slab&family=Teko:wght@300&display=swap" rel="stylesheet">
 </head>
 <body class="fuente">
     <!--navegacion-->
@@ -84,29 +86,30 @@
         </div>
       </div>
       </div>
-  <!-- footer-->
-  <div class="container-fluid  PieDePagina">
-    <div class="row">
+<!-- footer-->
+<div class="container-fluid  PieDePagina">
+  <div class="row">
+    <div class="col">
+      <h4>Siguenos en las Redes</h4>
+      <p><a href="https://www.facebook.com/" target="_blank"><img src="../imagenes/iconos/facebook.png" alt=""></a> Facebook</p>
+      <p><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="../imagenes/iconos/google-plus.png" alt=""></a> Nuestro Correo</p>
+      <p><a href="https://www.instagram.com/" target="_blank"><img src="../imagenes/iconos/instagram.png" alt=""></a> Instagram</p>
+      </div>
       <div class="col">
-        <h4>Siguenos en las Redes</h4>
-        <p><a href="https://www.facebook.com/" target="_blank"><img src="../imagenes/iconos/facebook.png" alt=""></a>Nuestra Pagina De facebook</p>
-        <p><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="../imagenes/iconos/google-plus.png" alt=""></a> Nuestro Correo</p>
-        <p><a href="https://www.instagram.com/" target="_blank"><img src="../imagenes/iconos/instagram.png" alt=""></a>Nuestro Instagram</p>
-        </div>
-        <div class="col">
-          <h4> ¿ Que Hacemos ?</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto alias, accusamus fuga velit quod </p>
-        </div>
-        <div class="col">
-          <h4> ¿ Donde Encontrarnos?</h4>
-          <p>Calle falsa 123</p>
-          <p>Buenos Aires</p>
-          <p>44445555/1150152687</p>
-        </div>
+        <h4> ¿ Que Hacemos ?</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto alias, accusamus fuga velit quod </p>
+      </div>
+      <div class="col">
+        <h4> ¿ Donde Encontrarnos?</h4>
+        <p>Calle falsa 123</p>
+        <p>Buenos Aires</p>
+        <p>44445555/1150152687</p>
       </div>
     </div>
   </div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>  
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
