--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/prueba.css">
     <link rel="stylesheet" href="../css/estilos.css">
-    <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Antic+Slab&family=Teko:wght@300&display=swap" rel="stylesheet"> 
 </head>
 <body class="fuente "> 
     <!--navegacion-->
@@ -51,15 +53,96 @@
         </div>
       </div>
     </div>
-  <!--articulos -->
-  <!--navegacion interna -->
-  <div class="container-fluid text-center tracking-in-expand-fwd ">
+    <!--articulos -->
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <h2>Nuetros Servicios</h2>
+        </div>
+      </div>
+    </div>
+  <div class="container text-center">
     <div class="row">
-      <div class="col-md-12 px-0">
-        <a href="#pizza">Pizza</a>
-        <a href="#facturas">Facturas</a>
-        <a href="#pastas">Pastas</a>
-        <a href="#tortas">Tortas</a>
+      <div class="col border border-success">
+        <h3>Nuestras Mejores Recetas</h3>
+        <img src="../imagenes/Pizza_Con_Morron.jpg" class="img-thumbnail" alt="Pizza_Con_Morron">
+      </div>
+      <div class="col border border-success">
+        <h3>Nuestras Mejores Recetas</h3>
+        <img src="../imagenes/Fideos_Picantes.jpg" class="img-thumbnail" alt="Pizza_Con_Morron">
+      </div>
+      <div class="col border border-success">
+        <h3>Nuestras Mejores Recetas</h3>
+        <img src="../imagenes/Torta_De_Frutilla.jpg" class="img-thumbnail" alt="Pizza_Con_Morron">
+      </div>
+    </div>
+  </div>
+  <div class="container text-center">
+    <div class="row">
+      <div class="col border border-dark">
+        <h3>torta</h3>
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <p><a href="#tortas"><img src="../imagenes/iconos/torta.png" alt="torta" class="rounded-circle"></a></p>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <ul >
+                <li >torta de Dulce de leche</li>
+                <li >torta de Frutilla</li>
+                <li >torta de limon</li>
+                <li >torta de chocolate</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col border border-dark">
+        <h3>Pizzas</h3>
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <p><a href="#pizza"><img src="../imagenes/iconos/pizza.png" alt="pizza" class="rounded-circle"></a></p>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <ul >
+                <li >Pizza 4 quesos</li>
+                <li >Pizza de rucula</li>
+                <li >Pizza a la Piedra</li>
+                <li >Pizza de jamon y queso </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col border border-dark">
+        <h3>fideos</h3>
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <p><a href="#pastas"><img src="../imagenes/iconos/fideos.png" alt="fideos" class="rounded-circle"></a></p>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <ul >
+                <li >Fideos Con Salsa</li>
+                <li >Fideos 4 Quesos</li>
+                <li >Fideos picante</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -108,27 +191,6 @@
       </div>
     </div>
   </div>
-  <!--articulos Facturas-->
-  <div class="container-fluid text-center tracking-in-expand-fwd">
-    <div class="row">
-      <div class="col-md-12">
-        <br><h1 id="facturas">Facturas</h1>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <br><img src="../imagenes/Medialunas_De_Manteca.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image" title="manteca">
-        <h2>Medialuna de Manteca</h2>
-        <p class="textos">
-          Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-        </p>
-        <p>
-          <a class="btn text-flicker-in-glow colorDeLink " href="https://www.youtube.com/" target="_blank">Mira el video en Youtube»</a>
-        </p>
-        <br><img src="../imagenes/TORTA DE CHOCOLATE.png" class="img-fluid rounded mx-auto d-block" alt="Responsive image" title="receta">
-      </div>
-    </div>
-  </div>
   <!--articulos Pastas-->
   <div class="container-fluid text-center tracking-in-expand-fwd">
     <div class="row">
@@ -150,29 +212,30 @@
       </div>
     </div>
   </div>
-  <!-- footer-->
-  <div class="container-fluid  PieDePagina">
-    <div class="row">
+<!-- footer-->
+<div class="container-fluid  PieDePagina">
+  <div class="row">
+    <div class="col">
+      <h4>Siguenos en las Redes</h4>
+      <p><a href="https://www.facebook.com/" target="_blank"><img src="../imagenes/iconos/facebook.png" alt=""></a> Facebook</p>
+      <p><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="../imagenes/iconos/google-plus.png" alt=""></a> Nuestro Correo</p>
+      <p><a href="https://www.instagram.com/" target="_blank"><img src="../imagenes/iconos/instagram.png" alt=""></a> Instagram</p>
+      </div>
       <div class="col">
-        <h4>Siguenos en las Redes</h4>
-        <p><a href="https://www.facebook.com/" target="_blank"><img src="../imagenes/iconos/facebook.png" alt=""></a>Nuestra Pagina De facebook</p>
-        <p><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="../imagenes/iconos/google-plus.png" alt=""></a> Nuestro Correo</p>
-        <p><a href="https://www.instagram.com/" target="_blank"><img src="../imagenes/iconos/instagram.png" alt=""></a>Nuestro Instagram</p>
-        </div>
-        <div class="col">
-          <h4> ¿ Que Hacemos ?</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto alias, accusamus fuga velit quod </p>
-        </div>
-        <div class="col">
-          <h4> ¿ Donde Encontrarnos?</h4>
-          <p>Calle falsa 123</p>
-          <p>Buenos Aires</p>
-          <p>44445555/1150152687</p>
-        </div>
+        <h4> ¿ Que Hacemos ?</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto alias, accusamus fuga velit quod </p>
+      </div>
+      <div class="col">
+        <h4> ¿ Donde Encontrarnos?</h4>
+        <p>Calle falsa 123</p>
+        <p>Buenos Aires</p>
+        <p>44445555/1150152687</p>
       </div>
     </div>
   </div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script> 
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
