--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/prueba.css">
     <link rel="stylesheet" href="../css/estilos.css">
-    <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Antic+Slab&family=Teko:wght@300&display=swap" rel="stylesheet"> 
 </head>
 <body class="fuente"> 
     <!--navegacion-->
@@ -68,13 +70,13 @@
         <img src="../imagenes/iconos/bandera.png" alt=""><p>argentina , chile , mexico</p>
     </div>
     <div class="col-6">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h2>Dónde encontrarnos​</h2>
+      <h4>Dirección De La Oficina Central:</h4><p> Avenida Del Libertador 1720, (1425) Capital Federal, Buenos Aires</p> 
+      <h4>Teléfonos:</h4><p> (0054-11) 4802-2000; (0054-11) 4802-2551; (0054-11) 4802-2438; (0054-11) 4801-6351; (0054-11)</p>
+      <h4>Fax:</h4><p>(0054‑11) 4802-5887</p>
+      <h4>E-mai​l:</h4><p>contacto@embajadadelperu.int.ar</p>
+      <h4>Horario de atención:</h4><p>de 09:00 a 13:00 hs. y de 15.00 a 18.00 hs.</p>
+      <h4>Horario de atención para información turística:</h4><p>L-V de 11:00 a 13:00 hs.</p>
     </div>
   </div>
 </div>	
@@ -83,9 +85,9 @@
     <div class="row">
       <div class="col">
         <h4>Siguenos en las Redes</h4>
-        <p><a href="https://www.facebook.com/" target="_blank"><img src="../imagenes/iconos/facebook.png" alt=""></a>Nuestra Pagina De facebook</p>
+        <p><a href="https://www.facebook.com/" target="_blank"><img src="../imagenes/iconos/facebook.png" alt=""></a> Facebook</p>
         <p><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="../imagenes/iconos/google-plus.png" alt=""></a> Nuestro Correo</p>
-        <p><a href="https://www.instagram.com/" target="_blank"><img src="../imagenes/iconos/instagram.png" alt=""></a>Nuestro Instagram</p>
+        <p><a href="https://www.instagram.com/" target="_blank"><img src="../imagenes/iconos/instagram.png" alt=""></a> Instagram</p>
         </div>
         <div class="col">
           <h4> ¿ Que Hacemos ?</h4>
@@ -100,7 +102,8 @@
       </div>
     </div>
   </div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script> 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
