se le coloco nueva informacion a las paginas de recetas

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
         <div class="col">
           <h4> ¿ Que Hacemos ?</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto alias, accusamus fuga velit quod </p>
+          <p>Nuestra empresa se dedica a ofrecer las mejores recetas para gente principiantes y gente experta en la cocina  </p>
         </div>
         <div class="col">
           <h4> ¿ Donde Encontrarnos?</h4>
