--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -161,7 +161,8 @@
         <br><img src="../imagenes/tortadedulcedeleche.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image" title="DulceDeleche">
         <h2>Torta De Dulce De Leche</h2>
         <p class="textos">
-          Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+          es un plato muy querido y degustado en países de América del Sur, tales como Venezuela, Colombia, Bolivia y Ecuador.¡En esta ocasión, te enseñaremos cómo hacer una torta !
+          Existen más de una receta de torta , siendo una de las más populares la torta de chocolate y de coco. Sin embargo, esta vez, preparemos una versión más dulce, hecha con queso blanco , dulce de leche  y caramelo. Disfruta de esta combinación exquisita de sabores y texturas que te sorprenderá.
         </p>
         <p>
           <a class="btn text-flicker-in-glow colorDeLink " href="https://www.youtube.com/" target="_blank">Mira el video en Youtube»</a>
@@ -182,7 +183,7 @@
         <br><img src="../imagenes/Pizza_Con_Morron.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image" title="morron">
         <h2>Pizza de Morron</h2>
         <p class="textos">
-          Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+          En un vaso, vierte el agua templada. Disuelve la levadura en el agua. En un bol ponemos la harina, la sal y, poco a poco, vertemos el agua con la levadura. Es más fácil si vamos amasando poco a poco a medida que echamos el agua, hasta verter toda y lograr una masa homogénea. Tras esto, coloca la masa en la encimera, cúbrete las manos de harina para que no se pegue y ponte a amasar. Si la masa se queda pegajosa ve añadiendo más harina. Ésta tiene que quedar lo suficientemente seca para que no se pegue en la mesa o las manos, pero no demasiado, porque si no puede romperse en el horno. Una vez que la masa esté homogénea, elástica, pero no pegajosa, incorpora el aceite, y vuelve a amasar hasta que se integre por completo. Haz una bola y realiza dos incisiones para que pueda crecer bien. Devúelvela al bol, tápalo con un paño humedo y dejalo que repose a temperatura ambiente.
         </p>
         <p>
           <a class="btn text-flicker-in-glow colorDeLink " href="https://www.youtube.com/" target="_blank">Mira el video en Youtube»</a>
@@ -203,7 +204,9 @@
         <br><img src="../imagenes/Fideos_Picantes.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image" title="picante">
         <h2>Pasta estilo Japones</h2>
         <p class="textos">
-          Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+          En una olla calienta el agua, una vez que comience a hervir y que las burbujas de agua sean grandes, agrega la sal; deja que el agua recupere el hervor y entonces vierte el Spaghetti La Moderna®. Cocina de 9 a 11 minutos; es importante mover la pasta suavemente con ayuda de una cuchara para que no se pegue al fondo de la olla.
+          Una vez pasado este tiempo saca el Spaghetti de la olla, la consistencia de este debe mostrarse elástica, al centro debe quedar un punto ligeramente crudo, a este punto se le conoce “Al dente”. Deja escurrir y reserva con un poco de aceite de oliva para evitar que se pegue entre sí.
+          Sirve acompañada de una salsa pomodoro, queso parmesano y albahaca fresca.
         </p>
         <p>
           <a class="btn text-flicker-in-glow colorDeLink " href="https://www.youtube.com/" target="_blank">Mira el video en Youtube»</a>
@@ -223,7 +226,7 @@
       </div>
       <div class="col">
         <h4> ¿ Que Hacemos ?</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto alias, accusamus fuga velit quod </p>
+        <p>Nuestra empresa se dedica a ofrecer las mejores recetas para gente principiantes y gente experta en la cocina  </p>
       </div>
       <div class="col">
         <h4> ¿ Donde Encontrarnos?</h4>
