--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/prueba.css">
     <link rel="stylesheet" href="./css/estilos.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Antic+Slab&family=Teko:wght@300&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
 </head>
 <body class="fuente">
     <!--navegacion-->
@@ -62,13 +59,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./imagenes/fondo3.png" class="d-block w-100" alt="...">
+          <img src="./imagenes/fondo3.png" class="d-block w-100" alt="fondo3">
         </div>
         <div class="carousel-item">
-          <img src="./imagenes/Fondo1.png" class="d-block w-100" alt="...">
+          <img src="./imagenes/Fondo1.png" class="d-block w-100" alt="fondo2">
         </div>
         <div class="carousel-item">
-          <img src="./imagenes/fondo2.png" class="d-block w-100" alt="...">
+          <img src="./imagenes/fondo2.png" class="d-block w-100" alt="fondo1">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
@@ -85,9 +82,9 @@
     <div class="row">
       <div class="col">
         <h4>Siguenos en las Redes</h4>
-        <p><a href="https://www.facebook.com/" target="_blank"><img src="./imagenes/iconos/facebook.png" alt=""></a> Facebook</p>
+        <p><a href="https://www.facebook.com/" target="_blank"><img src="./imagenes/iconos/facebook.png" alt=""></a>Nuestra Pagina De facebook</p>
         <p><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="./imagenes/iconos/google-plus.png" alt=""></a> Nuestro Correo</p>
-        <p><a href="https://www.instagram.com/" target="_blank"><img src="./imagenes/iconos/instagram.png" alt=""></a> Instagram</p>
+        <p><a href="https://www.instagram.com/" target="_blank"><img src="./imagenes/iconos/instagram.png" alt=""></a>Nuestro Instagram</p>
         </div>
         <div class="col">
           <h4> ¿ Que Hacemos ?</h4>
@@ -102,9 +99,8 @@
       </div>
     </div>
   </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
 
