--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -70,18 +70,8 @@
       <div class="container textos ">
         <div class="row">
           <div class="col">
-          <br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+          <br><p>Somos una empresa joven, dinámica e innovadora que, día tras día, lucha y centra esfuerzos en proporcionar productos de alto valor nutricional que ayuden a cubrir las necesidades de una sociedad cada vez más ocupada, pero más concienciada en lo que a la alimentación sana se refiere. Nuestro objetivo, convertirnos en una de las empresas europeas líderes en alimentación saludable y contribuir de esta manera a mejorar la salud y el bienestar general de la población.</p>
+          <p>Ponemos a vuestra disposición una gama de productos apetitosos de alto valor nutricional que, por su formato, permiten llevarlos a cualquier lugar y comerlos en cualquier situación. Los Bocados de Fruta son nuestro nuevo producto, un Snack Saludable elaborado a partir de fruta. Iremos completando la gama con productos nuevos que ya están muy cerca de su lanzamiento.</p>
         </div>
         </div>
       </div>
